# aicup22

./: .gitignore  CHANGELOG-en.md  CHANGELOG.md  README-en.md  README.md  aicup22.js  aicup22_bg.wasm  faq.md  index.html  preferences.json
assets/: config.json  shield_potion.mtl
assets/characters/: drink.mtl  drink_color.mtl  loot.mtl  loot_color.mtl  stand.mtl  stand_color.mtl
assets/obstacles/: Stump.mtl  Tree_1.mtl  Tree_2.mtl  mushroom1.mtl  mushroom2.mtl  pit.mtl  stone.mtl
assets/shaders/: bar.glsl  color.glsl  ellipse.glsl  fancy_ground.glsl  fancy_storm.glsl  flat_sprite.glsl  font.glsl  obj.glsl  obj_shadow.glsl  overlay.glsl  sprite.glsl  texture.glsl
clients/cpp/: DebugInterface.cpp  DebugInterface.hpp  MyStrategy.cpp  MyStrategy.hpp  Stream.hpp  TcpStream.cpp  TcpStream.hpp  entrypoint.sh  main.cpp
clients/cpp_variant/: CMakeLists.txt  DebugInterface.cpp  DebugInterface.hpp  Dockerfile  MyStrategy.hpp  Stream.cpp  TcpStream.cpp  clang.Dockerfile  main.cpp
clients/cpp_variant/codegame/: ClientMessage.cpp
clients/cpp_variant/debugging/: Camera.hpp  Color.cpp  Color.hpp  DebugCommand.cpp  DebugState.cpp  DebugState.hpp
clients/cpp_variant/model/: ActionOrder.cpp  ActionType.cpp  ActionType.hpp  Constants.hpp  Item.cpp  Loot.cpp  Loot.hpp  Obstacle.hpp  Order.hpp  Player.cpp  Player.hpp  Sound.hpp  UnitOrder.cpp  Vec2.hpp  WeaponProperties.hpp  Zone.cpp  Zone.hpp
clients/csharp/: AiCup22.csproj  DebugInterface.cs  MyStrategy.cs  Runner.cs  entrypoint.sh
clients/dlang/: Dockerfile  dub.json  entrypoint.sh
clients/fsharp/: AiCup22.fsproj  DebugInterface.fs  Dockerfile  MyStrategy.fs  Runner.fs  entrypoint.sh
clients/go/: .gitignore  Dockerfile  Makefile  debug_interface.go  entrypoint.sh  (+3 more)
docs-en/: app.md  client.md  controls.md  doc.md  game.md  options.md  rounds.md
docs-ru/: app.md  client.md  controls.md  doc.md  game.md  options.md  rounds.md
presets/: common.json  finals.json  round1.json  round2.json
quickstart/: MyStrategy.cpp  MyStrategy.cs  MyStrategy.java  MyStrategy.php  my_strategy.py  my_strategy.rb  my_strategy.rs
(+634 files in other folders)
